# mkw-sp

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .vimrc  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Incbin.S  LICENSE  README.md  banner.bin.bak  bmg.py  brctr.py  brlan.py  brlyt.py  build.py  configure.py  elf2dol.py  fetch.py  generate_symbol_map.py  lzmac.py  lzmad.py  merge.py  opening.bnr  port.py  postprocess.py  settings.py  sort.py  symbols.txt  u8.py  version.py  wuj5.py  xfb2png.py  yaz.py
.github/ISSUE_TEMPLATE/: enhancement-request.md  feature-request.md  mkw-sp-bug.md  vanilla-game-bug.md
.github/workflows/: build.yml  build_sp.yml  build_tools.yml  clean_bmg.yml  run_tidy.yml
assets/: MegaTC.brres  RKRace_SP.breff  RKRace_SP.breft  balloon.brres  jugemu_lap_F.brres  jugemu_lap_G.brres  jugemu_lap_I.brres  jugemu_lap_J.brres  jugemu_lap_M.brres  jugemu_lap_N.brres  jugemu_lap_Q.brres  jugemu_lap_S.brres  jugemu_lap_U.brres  jugemu_lapf_G.brres  jugemu_lapf_I.brres  jugemu_lapf_J.brres  jugemu_lapf_N.brres  jugemu_lapf_Q.brres  jugemu_lapf_S.brres  jugemu_lapf_U.brres  kart_font_K.brfnt  kart_kanji_font.brfnt  mario_font_number_nocolor.brfnt  mario_font_number_outline.brfnt  tt_kart_font_rodan_ntlg_pro_b_K.brfnt  tt_kart_font_rodan_ntlg_pro_b_R.brfnt
assets/message/: CommonSP_D.bmg.json5  CommonSP_E.bmg.json5  CommonSP_F.bmg.json5  CommonSP_G.bmg.json5  CommonSP_I.bmg.json5  CommonSP_J.bmg.json5  CommonSP_M.bmg.json5  CommonSP_N.bmg.json5  CommonSP_Q.bmg.json5  CommonSP_S.bmg.json5  CommonSP_U.bmg.json5  Common_E.bmg.json5  Common_F.bmg.json5  Common_G.bmg.json5  Common_I.bmg.json5  Common_J.bmg.json5  Common_K.bmg.json5  Common_M.bmg.json5  Common_N.bmg.json5  Common_Q.bmg.json5  Common_S.bmg.json5  Common_U.bmg.json5  MenuSP_D.bmg.json5  MenuSP_E.bmg.json5  MenuSP_F.bmg.json5  MenuSP_G.bmg.json5  MenuSP_I.bmg.json5  MenuSP_J.bmg.json5  MenuSP_K.bmg.json5  MenuSP_M.bmg.json5  MenuSP_N.bmg.json5  MenuSP_Q.bmg.json5  MenuSP_S.bmg.json5  MenuSP_U.bmg.json5  Menu_E.bmg.json5  Menu_F.bmg.json5  Menu_G.bmg.json5  Menu_I.bmg.json5  Menu_J.bmg.json5  Menu_K.bmg.json5  (+27 more)
common/: Bytes.hh  Cache.h  Clock.cc  Clock.hh  Console.cc  Console.h  Console.hh  DCache.cc  DCache.hh  ES.cc  ES.hh  ExceptionSyms.cc  FS.cc  FS.hh  Font.c  ICache.cc  ICache.hh  IOS.cc  IOS.hh  Ios.c  Ios.h  Memcpy.c  Memset.c  Paths.h  Paths.hh  Quat.S  Quat.cc  Quat.hh  RMC.ld  Strlcpy.c  Strlen.c  TQuat.S  TQuat.cc  TQuat.hh  TVec3.S  TVec3.cc  TVec3.hh  VI.cc  VI.hh  Vec3.cc  (+2 more)
fuzz/: CMakeLists.txt  CMakeSettings.json  NetStorageServer.py  tests.cpp
include/: Common.S  Common.h  Common.hh  Dol.h  Payload.h  Rel.h
loader/: Apploader.c  Apploader.cc  Apploader.h  Apploader.hh  Cache.S  Cache.h  Console.c  Console.h  DI.cc  DI.hh  Delay.S  Delay.h  Di.c  Di.h  Dol.cc  Dol.hh  Es.c  Es.h  Font.c  Font.cc  Font.h  Font.hh  Ios.c  Ios.h  Loader.c  Loader.cc  Memset.c  OS.cc  OS.hh  RMC.ld  Stack.c  Stack.h  Start.S  VI.cc  VI.hh  Vi.c  Vi.h
meta/: debug.xml  release.xml  test.xml
payload/: revolution.h  revolution.hh  revolutionex.h  rfl.h
payload/game/: README.md
payload/platform/: README.md  guard.c  isdigit.c  isxdigit.c  stdlib.c  string.c  wchar.c  wctype.c
payload/revolution/: OS.S  OS.c  arc.S  arc.c  arc.h  ax.c  ax.h  dvd.S  dvd.c  dvd.h  dvdex.c  dvdex.h  es.c  es.h  exi.c  exi.h  gx.h  ios.S  ios.c  ios.h  isfs.h  kpad.h  mem.h  mtx.h  nand.c  nand.h  net.h  os.h  pad.h  sc.h  si.h  so.h  start.S  tpl.cc  tpl.h  vi.h  wpad.h
payload/revolutionex/: nhttp.h
payload/sp/: BaseSettings.c  BaseSettings.h  Benchmark.c  Benchmark.h  Bytes.h  Bytes.hh  Channel.cc  Channel.h  Channel.hh  CircularBuffer.hh  ClientSettings.c  ClientSettings.h  Commands.c  Commands.cc  Commands.h  Commands.hh  CourseDatabase.cc  CourseDatabase.hh  CourseManager.c  CourseManager.h  CrazyCollision.S  DVDDecompLoader.cc  DVDDecompLoader.h  DVDDecompLoader.hh  DVDFile.cc  DVDFile.hh  Decoder.hh  Dol.h  ExceptionSyms.cc  Exchange.hh  FatStorage.c  FatStorage.h  Fatal.c  FixedString.hh  FlameGraph.c  FlameGraph.h  FormattingCodes.c  FormattingCodes.h  HeapAllocator.hh  HexParser.h  (+104 more)
portfinder/: .gitignore
portfinder/src/: main.rs
protobuf/: Login.proto  Matchmaking.options  Matchmaking.proto  NetStorage.options  NetStorage.proto  Race.options  Race.proto  Ranking.options  Ranking.proto  Room.options  Room.proto  TrackPacks.options  TrackPacks.proto  Update.options  Update.proto  UpdateRequest.options  UpdateRequest.proto  UpdateRequestMessage.options  UpdateRequestMessage.proto  UpdateResponse.options  UpdateResponse.proto
relport/: Cargo.toml
relport/src/: main.rs
riivolution/: mkw-sp.xml
stub/: Archive.cc  Archive.hh  Dolphin.cc  Dolphin.hh  FS.cc  FS.hh  Fs.c  Fs.h  LZMA.cc  LZMA.hh  Memcmp.c  RMC.ld  Start.S  Strchr.c  Strncmp.c  Stub.c  Stub.cc
tools/: write.py
tools/bmg-cleaner/: README.md  bmg-cleaner.py
tools/directconnectioncode/: directconnectioncode.py
tools/gameserver/: Cargo.toml  build.rs
tools/gameserver/src/: async_stream.rs  client.rs  event.rs  main.rs  matchmaking.rs  request.rs  room.rs  server.rs  unreliable_socket.rs
tools/matchmaking/: Cargo.toml  docker-compose.yml  sqlx-data.json
tools/matchmaking/migrations/: 20230125215110_initial-schema.sql  20230203184635_device-id.sql  20230218215911_race-rating.sql  20230301091326_accepts-friends.sql
tools/matchmaking/src/: ids.rs  main.rs  tcp_forward.rs  ws_forward.rs
tools/netprotocol/: Cargo.toml  build.rs
tools/netprotocol/src/: async_stream.rs  lib.rs  negotiation.rs
tools/netstorageserver/: Cargo.toml  build.rs
tools/netstorageserver-cli/: Cargo.toml
tools/netstorageserver-cli/src/: main.rs
tools/portfinder/: .gitignore  Cargo.toml
tools/sign/: Cargo.toml
tools/updateserver/: Cargo.toml  build.rs
tools/updateserver/src/: main.rs
www/: .gitignore  _config.yml  blog.markdown  brsar.markdown  brwar.markdown  docs.markdown  download.markdown  features.markdown  index.markdown  my-stuff.markdown  stats.txt  tools.markdown
(+1866 files in other folders)
