[package]
name = "updateserver"
version = "0.0.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.4.0", features = ["std"] }
chrono = "0.4.19"
libhydrogen = "0.4.1"
passterm = "1.1.6"
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "io-util", "net", "sync", "fs"] }
zeroize = "1.5.5"

[build-dependencies]
prost-build = "0.10.4"
