[package]
name = "updateserver"
version = "0.0.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.4.0", features = ["std"] }
chrono = "0.4.19"
libhydrogen = "0.4.1"
passterm = "1.1.7"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "io-util", "net", "sync", "fs"] }
zeroize = "1.5.5"
netprotocol = { path = "../netprotocol" }
anyhow = "1.0.71"

# Startup password hashing will take insane amounts of time otherwise.
[profile.dev.package.argon2]
opt-level = 3
